--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OBA - voeding</title>
+    <script src="./js/js.js" type="module"></script>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <header>
+        <img src="./images/logo.jpeg" alt="Logo OBA">
+            <input type="checkbox" id="toggleSearch">
+            <label for="toggleSearch"><img src="./images/magnify.jpg" alt="Search"></label>
+        <form action="GET" id="form">
+            <input type="text" placeholder="Zoeken e.g. 'voeding', 'sporten', 'kookboeken' ">
+            <button type="submit">Zoeken</button>
+        </form>
+    </header>
     <main>
-        
     </main>
-    <script src="./js/js.js"></script>
+    <!-- <script src="./js/js.js"></script> -->
 </body>
 </html>
