:sparkles: Rekenmachine + searchbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
         </form>
     </header>
     <main>
+        <!-- <img src="./images/vegetables.png" alt="vegetables footer"> -->
+        <input type="checkbox" id="calculator">
+        <label for="calculator" class="calcButton"><img src="./images/calc.png" alt="calculator"></label>
+        <form action="">
+            <label for="">Voor hoeveel mensen geeft het recept aan dat het is?</label>
+            <input type="number" placeholder="e.g. '4'">
+            <label for="">Voor hoeveel personen maak je het recept?</label>
+            <input type="number" placeholder="e.g. '2'">
+            <label for="">Hoeveel gram volgens het recept?</label>
+            <input type="number" placeholder="e.g. '500'">
+            <h2></h2>
+            <button>bereken</button>
+        </form>
     </main>
-    <!-- <script src="./js/js.js"></script> -->
 </body>
 </html>
