--- a/index.html
+++ b/index.html
@@ -10,15 +10,47 @@
 </head>
 <body>
     <header>
-        <img src="./images/logo.jpeg" alt="Logo OBA">
+        <!-- <img src="./images/logo.jpeg" alt="Logo OBA"> -->
+        <h1><span>o</span><span>b</span><span>a</span></h1>
             <input type="checkbox" id="toggleSearch">
-            <label for="toggleSearch"><img src="./images/magnify.jpg" alt="Search"></label>
+            <label for="toggleSearch"><img src="./images/greenglass.png" alt="Search"></label>
         <form action="GET" id="form">
             <input type="text" placeholder="Zoeken e.g. 'voeding', 'sporten', 'kookboeken' ">
             <button type="submit">Zoeken</button>
         </form>
     </header>
     <main>
+        <ul class="displayNone">
+            <li><img src="./images/veggies.png" alt=""></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <section class="displayNone">
+            <h2>ERROR</h2>
+            <p>Er is iets mis gegaan met de boeken ophalen, probeer het later opnieuw</p>
+        </section>
+        <ul>
+            <!-- <li>
+                <section>
+                <h2>${item.titles[0]}</h2>
+                <p>${item.summaries ? item.summaries[0] : 'Geen samenvatting'}</p>
+                </section>
+                <img src="${
+                item.coverimages ? item.coverimages[1] : 'Geen samenvatting'
+                }">
+            </li>
+            <li>
+                <section>
+                <h2>${item.titles[0]}</h2>
+                <p>${item.summaries ? item.summaries[0] : 'Geen samenvatting'}</p>
+                </section>
+                <img src="${
+                item.coverimages ? item.coverimages[1] : 'Geen samenvatting'
+                }">
+            </li> -->
+        </ul>
         <!-- <img src="./images/vegetables.png" alt="vegetables footer"> -->
         <input type="checkbox" id="calculator">
         <label for="calculator" class="calcButton"><img src="./images/calc.png" alt="calculator"></label>
