--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <header>
-        <!-- <img src="./images/logo.jpeg" alt="Logo OBA"> -->
         <h1><span>o</span><span>b</span><span>a</span></h1>
             <input type="checkbox" id="toggleSearch">
             <label for="toggleSearch"><img src="./images/greenglass.png" alt="Search"></label>
@@ -20,6 +19,7 @@
         </form>
     </header>
     <main>
+        <img class="footer" src="./images/vegetables.png" alt="veggies">
         <ul class="displayNone">
             <li><img src="./images/veggies.png" alt=""></li>
             <li></li>
@@ -27,6 +27,10 @@
             <li></li>
             <li></li>
         </ul>
+        <section>
+            <h2>Voeding & Recepten</h2>
+            <p>Welkom op de OBA voeding en recepten pagina! Gebruik de zoekbalk om kookboeken en recepten te vinden!</p>
+        </section>
         <section class="displayNone">
             <h2>ERROR</h2>
             <p>Er is iets mis gegaan met de boeken ophalen, probeer het later opnieuw</p>
