--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <button type="submit">Zoeken</button>
         </form>
     </header>
-    
+
     <main>
-        <img class="footer" src="./images/vegetables.png" alt="veggies">
+        <!-- <img class="footer" src="./images/vegetables.png" alt="veggies"> -->
         <ul class="displayNone">
             <li><img src="./images/veggies.png" alt=""></li>
             <li></li>
