:sparkles: details (not working)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <!-- <img class="footer" src="./images/vegetables.png" alt="veggies"> -->
+        <img class="footer" src="./images/vegetables.png" alt="veggies">
         <ul class="displayNone">
             <li><img src="./images/veggies.png" alt=""></li>
             <li></li>
