:sparkles: zoekterm feedback

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h2>ERROR</h2>
             <p>Er is iets mis gegaan met de boeken ophalen, probeer het later opnieuw</p>
         </section>
+        <h2 class="results"></h2>
         <ul>
         </ul>
         <input type="checkbox" id="calculator">
