:sparkles: api data fetch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1><span>o</span><span>b</span><span>a</span></h1>
+        <a href=""><h1><span>o</span><span>b</span><span>a</span></h1></a>
             <input type="checkbox" id="toggleSearch">
             <label for="toggleSearch"><img src="./images/greenglass.png" alt="Search"></label>
         <form action="GET" id="form">
@@ -20,7 +20,6 @@
     </header>
 
     <main>
-        <img class="footer" src="./images/vegetables.png" alt="veggies">
         <ul class="displayNone">
             <li><img src="./images/veggies.png" alt=""></li>
             <li></li>
@@ -36,6 +35,10 @@
             <h2>ERROR</h2>
             <p>Er is iets mis gegaan met de boeken ophalen, probeer het later opnieuw</p>
         </section>
+        <section class="displayNone">
+            <p>Bekijk onze omreken widget!</p>
+            <img src="./images/arrow-pointing-left-green.png" alt="">
+        </section>
         <h2 class="results"></h2>
         <ul>
         </ul>
@@ -46,7 +49,7 @@
             <input type="number" placeholder="e.g. '4'">
             <label for="">Voor hoeveel personen maak je het recept?</label>
             <input type="number" placeholder="e.g. '2'">
-            <label for="">Hoeveel gram volgens het recept?</label>
+            <label for="">Hoeveel gram moet je toevoegen volgens het recept?</label>
             <input type="number" placeholder="e.g. '500'">
             <h2></h2>
             <button>bereken</button>
